# Cappuchin

./: .clang-tidy  .coderabbit.yaml  .gitignore  CMakeLists.txt  README.md  typos.toml
.github/: renovate.json5
.github/workflows/: build-and-test-reusable.yml  build-and-test.yml  build.yml  ci-pr.yml  ci-push.yml  ci.yml  coverity.yml  docker-build.yaml  docker-build.yml  lint-reusable.yml  lint.yml  static-analysis-reusable.yml  static-analysis.yml  typos-reusable.yml  typos.yml
cmake/: dev-mode.cmake  fmt.cmake  folders.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  project-is-top-level.cmake  spell-targets.cmake  spell.cmake  variables.cmake
source/: coverity.hpp  gc.hpp  main.cpp  overloaded.hpp
source/analyzer/: analyzer.cpp  analyzer.hpp
source/ast/: array_literal.cpp  array_literal.hpp  assign_expression.cpp  assign_expression.hpp  binary_expression.cpp  binary_expression.hpp  boolean_literal.cpp  boolean_literal.hpp  call_expression.cpp  call_expression.hpp  decimal_literal.cpp  decimal_literal.hpp  expression.hpp  function_literal.cpp  function_literal.hpp  hash_literal.cpp  hash_literal.hpp  identifier.cpp  identifier.hpp  if_expression.cpp  if_expression.hpp  index_expression.cpp  index_expression.hpp  integer_literal.cpp  integer_literal.hpp  null_literal.cpp  null_literal.hpp  program.cpp  program.hpp  statements.cpp  statements.hpp  string_literal.cpp  string_literal.hpp  unary_expression.cpp  unary_expression.hpp  util.hpp  visitor.hpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt
test/benchmark/source/: main.cpp
(+37 files in other folders)
